# sevendayshpc

./: .gitignore  Cargo.toml
.circleci/: config.yml
.github/workflows/: mpirun.yml  rust.yml
day1/: .gitignore  Cargo.toml  rank.rs
day1/src/: hello.rs
day3/: Cargo.toml  calc_pi.rs
day3/src/: calc_pi.rs  calc_pi_mpi.rs  calc_pi_reduce.rs  processfile.rs
day4/: .gitignore  Cargo.toml
day4/src/: gather.rs  thermal.rs  thermal_mpi.rs
day5/: .gitignore  Cargo.toml  a.out  image.py  test.csv
day5/src/: gather2d.rs  gs.rs  gs_mpi.rs  sendrecv.rs
day6/: .gitignore  Cargo.toml  vmem.cpp
day6/src/: gs.rs  gs_omp.rs
day7/: .gitignore  Cargo.toml
day7/src/: add.rs  func.rs  func_simd.rs  load.rs  loadasm.rs  mul.rs  print.rs  simdcheck.rs
day7/src/magnetic/: mag.rs  mag_simd.rs  mag_soa.rs
mpi-util/: Cargo.toml
mpi-util/examples/: dims_create.rs  printf.rs
mpi-util/src/: lib.rs  stdout.rs
