[package]
name = "days3"
version = "0.1.0"
authors = ["doraneko94 <shuntaro94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpi = "0.5"
rand = "0.7"
rand_core = "0.5"

[[bin]]
name = "calc_pi"
path = "src/calc_pi.rs"

[[bin]]
name = "calc_pi_mpi"
path = "src/calc_pi_mpi.rs"

[[bin]]
name = "processfile"
path = "src/processfile.rs"

[[bin]]
name = "calc_pi_reduce"
path = "src/calc_pi_reduce.rs"
