[package]
name = "days4"
version = "0.1.0"
authors = ["doraneko94 <shuntaro94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpi = { git = "https://github.com/rsmpi/rsmpi", rev = "f9aec8b8d82" }

[[bin]]
name = "thermal"
path = "src/thermal.rs"

[[bin]]
name = "thermal_mpi"
path = "src/thermal_mpi.rs"

[[bin]]
name = "gather"
path = "src/gather.rs"
