[package]
name = "days6"
version = "0.1.0"
authors = ["doraneko94 <shuntaro94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpi = { git = "https://github.com/rsmpi/rsmpi", rev = "f9aec8b8d82" }
rayon = "^1.3"

[[bin]]
name = "gs"
path = "src/gs.rs"

[[bin]]
name = "gs_omp"
path = "src/gs_omp.rs"